--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Connection.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Console.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
