--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -62,6 +62,12 @@
     <Compile Include="Application.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Console.cs" />
+    <Compile Include="Visual.cs" />
+    <Compile Include="Utils.cs" />
+    <Compile Include="Messages\Communication.cs" />
+    <Compile Include="Messages\Response.cs" />
+    <Compile Include="Messages\Token.cs" />
+    <Compile Include="Messages\Batch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
