--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Registry.cs" />
     <Compile Include="Attributes.cs" />
     <Compile Include="Directories.cs" />
+    <Compile Include="Options.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="protobuf-net, Version=1.0.0.262, Culture=neutral, PublicKeyToken=257b51d87d2e4d67">
