--- a/optimization-sharp.pc.in
+++ b/optimization-sharp.pc.in
@@ -1,7 +1,7 @@
 Name: optimization-sharp
 Description: optimization-sharp
 Version: 0.1
-Libraries=@expanded_libdir@/@PACKAGE@/optimization-sharp.dll @expanded_libdir@/@PACKAGE@/protobuf-net.dll
+Libraries=@expanded_libdir@/@PACKAGE@/Optimization.dll @expanded_libdir@/@PACKAGE@/protobuf-net.dll
 
 Requires: 
-Libs: -r:@expanded_libdir@/@PACKAGE@/optimization-sharp.dll -r:@expanded_libdir@/@PACKAGE@/protobuf-net.dll
+Libs: -r:@expanded_libdir@/@PACKAGE@/Optimization.dll -r:@expanded_libdir@/@PACKAGE@/protobuf-net.dll
