--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System" />
     <Reference Include="System.Xml" />
+    <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Optimization\" />
