--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Optimization.Dispatcher.Internal\Dispatcher.cs" />
     <Compile Include="Optimization.Dispatcher.Internal\Internal.cs" />
     <Compile Include="Optimization.Dispatcher.Internal\Registry.cs" />
+    <Compile Include="Optimization.Storage\Records.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="protobuf-net, Version=1.0.0.262, Culture=neutral, PublicKeyToken=257b51d87d2e4d67">
