Use communication for dispatcher

--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Optimization.Storage\Records.cs" />
     <Compile Include="Optimization\NumericSetting.cs" />
     <Compile Include="Optimization.Messages\Identify.cs" />
+    <Compile Include="Optimization.Messages\Ping.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="protobuf-net, Version=1.0.0.262, Culture=neutral, PublicKeyToken=257b51d87d2e4d67">
