Fixed versioning and pc file

--- a/optimization-sharp.pc.in
+++ b/optimization-sharp.pc.in
@@ -1,6 +1,6 @@
 Name: optimization-sharp
 Description: optimization-sharp
-Version: 1.2
+Version: @VERSION@
 Libraries=@expanded_libdir@/@PACKAGE@/Optimization.dll @expanded_libdir@/@PACKAGE@/protobuf-net.dll
 
 Requires: 
