Added support for optimizer extensions

--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Optimization.Messages\Identify.cs" />
     <Compile Include="Optimization.Messages\Ping.cs" />
     <Compile Include="Optimization\Utils.cs" />
+    <Compile Include="Optimization\Extension.cs" />
     <Compile Include="Optimization.Attributes\Attributes.cs" />
   </ItemGroup>
   <ItemGroup>
