--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Optimization.Attributes\Attributes.cs" />
     <Compile Include="Optimization.Messages\Progress.cs" />
     <Compile Include="Optimization.Messages\Notification.cs" />
+    <Compile Include="Optimization\UserData.cs" />
+    <Compile Include="Optimization\ICopyable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="protobuf-net, Version=1.0.0.262, Culture=neutral, PublicKeyToken=257b51d87d2e4d67">
