--- a/Makefile.am
+++ b/Makefile.am
@@ -1,13 +1,8 @@
+SUBDIRS = m4
 
-EXTRA_DIST =  expansions.m4 protobuf-net.dll
+ACLOCAL_AMFLAGS = -I m4
 
-#Warning: This is an automatically generated file, do not edit!
-if ENABLE_DEBUG
- SUBDIRS =  . 
-endif
-if ENABLE_RELEASE
- SUBDIRS =  . 
-endif
+EXTRA_DIST = protobuf-net.dll
 
 # Include project specific makefile
 include optimization-sharp.make
