--- a/optimization-sharp.csproj
+++ b/optimization-sharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Optimization\UserData.cs" />
     <Compile Include="Optimization\ICopyable.cs" />
     <Compile Include="Optimization.Storage\Database.cs" />
+    <Compile Include="Optimization.Messages\Command.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="protobuf-net, Version=1.0.0.262, Culture=neutral, PublicKeyToken=257b51d87d2e4d67">
