Updated dependencies and rules

--- a/debian/control
+++ b/debian/control
@@ -5,10 +5,11 @@ Build-Depends: debhelper (>= 7),
                autotools-dev,
                cdbs,
                pkg-config,
-               mono-devel | mono-gmcs,
+               mono-gmcs,
                libmono-sqlite2.0-cil,
                libmono2.0-cil,
-               libbiorob-math1-sharp (>= 0.3)
+               libbiorob-math1-sharp (>= 0.3),
+               libtool
 Standards-Version: 3.8.0
 Section: libs
 Homepage: http://biorob.epfl.ch
