--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,8 @@ Build-Depends: debhelper (>= 7),
                autotools-dev,
                cdbs,
                pkg-config,
-               mono-gmcs,
-               libmono-sqlite2.0-cil,
-               libmono2.0-cil,
+               mono-dmcs,
+               libmono-sqlite4.0-cil,
                libbiorob-math1-sharp (>= 0.3),
                libtool
 Standards-Version: 3.8.0
@@ -17,6 +16,6 @@ Homepage: http://biorob.epfl.ch
 Package: liboptimization2-sharp
 Section: libs
 Architecture: any
-Depends: mono-runtime, libmono-system2.0-cil, libmono-corlib2.0-cil, libmono-sqlite2.0-cil, libmono2.0-cil, libbiorob-math1-sharp
+Depends: mono-runtime, libmono-system4.0-cil, libmono-corlib4.0-cil, libmono-sqlite4.0-cil, libbiorob-math1-sharp
 Description: Optimization framework C# bindings
  C# bindings for the optimization framework
